LOLCAT ADDED IN LANGUAGES LET'S GOOOO

--- a/static/lang/languages.json
+++ b/static/lang/languages.json
@@ -4,6 +4,10 @@
 			"languageName": "English (US)",
 			"flag": "🇺🇸"
 		},
+		"LOLCAT": {
+			"languageName": "LOLCAT (CAT)",
+			"flag": "😺"
+		},
 		"fr-fr": {
 			"languageName": "Français",
 			"flag": "🇫🇷"
